push for update angular

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -125,9 +125,18 @@ span {
   width: 20%;
   max-width: 40%;
 }
+.law-offices-input-width {
+  width: 30%;
+  max-width: 40%;
+}
 
 .red-snackbar {
   background-color: brown;
+}
+
+.green-snackbar {
+  color: #270;
+  background-color: #DFF2BF;
 }
 
 .mat-tree-node {
