--- a/src/assets/resources/scss/main.scss
+++ b/src/assets/resources/scss/main.scss
@@ -24,6 +24,7 @@
 @import "layout/breadcrumb";
 
 @import "components/buttons";
+@import "components/modal";
 
 @import "themes/spinner";
 @import "themes/theme";
