--- a/src/app/components/sub-categories/agencies/litigation/lawyer/lawyer/lawyer.component.html
+++ b/src/app/components/sub-categories/agencies/litigation/lawyer/lawyer/lawyer.component.html
@@ -1,3 +1,4 @@
+<app-request></app-request>
 <mat-accordion>
   <mat-expansion-panel [expanded]="step === 0" (opened)="setStep(0)" >
     <mat-expansion-panel-header >
