--- a/src/app/modal/fees-modal/fees-modal.component.html
+++ b/src/app/modal/fees-modal/fees-modal.component.html
@@ -17,7 +17,7 @@
           <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
           <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
         </mat-table>
-        <p>الإجمالي: {{fees.total}}</p>
+        <p>الإجمالي: {{total}}ريال عماني </p>
       </mat-card-content>
       <mat-card-actions>
         <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
