--- a/src/app/core/side-menu/side-menu.component.html
+++ b/src/app/core/side-menu/side-menu.component.html
@@ -1,3 +1,4 @@
+
 <mat-sidenav-container class="side-menu" [hasBackdrop]="false">
   <mat-sidenav #sidenav [mode]="'side'" gdArea="side" opened>
 <app-right-menu></app-right-menu>
@@ -5,7 +6,7 @@
 
   <mat-sidenav-content [@onMainContentChange]="onSideNavChange ? 'open': 'close'">
     <app-header [sidenav]="sidenav"></app-header>
-    <app-bread-crumbs></app-bread-crumbs>
+    <!--<app-bread-crumbs></app-bread-crumbs>-->
 
 <ng-content></ng-content>
     <app-footer gdArea="footer"></app-footer>
