--- a/src/app/components/side-menu-pages/admin-tipes/admin-tipes.component.html
+++ b/src/app/components/side-menu-pages/admin-tipes/admin-tipes.component.html
@@ -11,65 +11,75 @@
      
     <mat-divider></mat-divider>
 
-    <mat-card-content>
+    
       <div class="example-container">
 
-        <mat-form-field appearance="fill">
-          <mat-label>نوع الكود</mat-label>
-          <mat-select>
-            <mat-option value="option">Option</mat-option>
-          </mat-select>
-        </mat-form-field>
+        <mat-card-content>
+            <mat-form-field appearance="fill">
+            <mat-label>نوع الكود</mat-label>
+            <mat-select>
+                <mat-option value="option">Option</mat-option>
+            </mat-select>
+            </mat-form-field>
+        </mat-card-content>
 
         <br>
 
-       <fieldset>
-            <legend>قائمه</legend>
-    <div class="mat-elevation-z8">
-         <table mat-table >
+        <mat-card-content>
+        <fieldset>
+                <legend>قائمه</legend>
 
-                <ng-container matColumnDef="position">
-                  <th mat-header-cell *matHeaderCellDef>الترتيب </th>
-                </ng-container>
-              
-                <ng-container matColumnDef="arabicName">
-                  <th mat-header-cell *matHeaderCellDef> الإسم باللغه العربيه </th>
-                </ng-container>
-              
-                <ng-container matColumnDef="englishName">
-                  <th mat-header-cell *matHeaderCellDef> الإسم باللغه الإنجليزيه </th>
-                </ng-container>
-              
-                <ng-container matColumnDef="englishSymbol">
-                  <th mat-header-cell *matHeaderCellDef> الكود باللغه الإنجليزيه </th>
-                </ng-container>
+            <mat-table class="mat-elevation-z8">
 
-                <ng-container matColumnDef="statues">
-                    <th mat-header-cell *matHeaderCellDef>الحالة </th>
-                </ng-container>
+                    <ng-container matColumnDef="position">
+                        <mat-header-cell *matHeaderCellDef> الترتيب </mat-header-cell>
+                        <mat-cell> nnnnnnnn </mat-cell>
+                    <!-- <th mat-header-cell *matHeaderCellDef>الترتيب </th> -->
+                    </ng-container>
+                
+                    <ng-container matColumnDef="arabicName">
+                    <mat-header-cell *matHeaderCellDef> الإسم باللغه العربيه </mat-header-cell>
+                    <mat-cell> nnnnnnnn </mat-cell>
+                    </ng-container>
+                
+                    <ng-container matColumnDef="englishName">
+                    <mat-header-cell *matHeaderCellDef> الإسم باللغه الإنجليزيه </mat-header-cell>
+                    <mat-cell> nnnnnnnn </mat-cell>
+                    </ng-container>
+                
+                    <ng-container matColumnDef="englishSymbol">
+                    <mat-header-cell *matHeaderCellDef> الكود باللغه الإنجليزيه </mat-header-cell>
+                    <mat-cell> nnnnnnnn </mat-cell>
+                    </ng-container>
 
-                <ng-container matColumnDef="edit">
-                    <th mat-header-cell *matHeaderCellDef> تعديل </th>
-                </ng-container>
+                    <ng-container matColumnDef="statues">
+                        <mat-header-cell *matHeaderCellDef>الحالة </mat-header-cell>
+                        <mat-cell> nnnnnnnn </mat-cell>
+                    </ng-container>
 
-                <ng-container matColumnDef="delete">
-                    <th mat-header-cell *matHeaderCellDef> حذف </th>
-                </ng-container>
-              
-                <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-                <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-            </table>
+                    <ng-container matColumnDef="edit">
+                        <mat-header-cell *matHeaderCellDef> تعديل </mat-header-cell>
+                        <mat-cell > nnnnnnnn </mat-cell>
+                    </ng-container>
 
-            <mat-paginator [pageSize]="2" [pageSizeOptions]="[2, 4, 6, 10, 20]">
-            </mat-paginator>
-            
-        </div> 
+                    <ng-container matColumnDef="delete">
+                        <mat-header-cell *matHeaderCellDef> حذف </mat-header-cell>
+                        <mat-cell > nnnnnnnn </mat-cell>
+                    </ng-container>
+                
+                    <!-- <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr> -->
 
-            
+                    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+                    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+                </mat-table>
 
+                <mat-paginator [pageSize]="2" [pageSizeOptions]="[2, 4, 6, 10, 20]">
+                </mat-paginator>
 
-        </fieldset>
+            </fieldset>
+        </mat-card-content>
       </div>
-    </mat-card-content>
+
   </mat-card>
 
