--- a/src/styles.scss
+++ b/src/styles.scss
@@ -165,3 +165,7 @@ span {
 .mat-expansion-panel-header-title, .mat-expansion-panel-header-description {
   color: #856b4b !important;
 }
+.svg-size {
+  width: 40% !important;
+  height: 40% !important;
+}
