--- a/src/assets/resources/scss/components/_modal.scss
+++ b/src/assets/resources/scss/components/_modal.scss
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   flex-wrap: wrap;
   h3 {
     font-size: 20px;
