--- a/src/app/common/components/request/request.component.html
+++ b/src/app/common/components/request/request.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngIf="!requestId">
   <button mat-fab color="basic" type="button" matTooltip="إنشاء طلب">
-    <mat-icon class="icon-size" (click)="createRequest(request.value)">add_circle_outline</mat-icon>
+    <mat-icon class="icon-size" svgIcon="undraw_add_file2_gvbb" (click)="createRequest(request.value)"></mat-icon>
   </button>
 </ng-container>
 
