finished fees calculations and move from icons to svg

--- a/src/app/auth/logout/logout.component.html
+++ b/src/app/auth/logout/logout.component.html
@@ -1,5 +1,5 @@
 <section>
   <a mat-icon-button>
-    <mat-icon class="icon" aria-label="LogOut" (click)="logout()">power_settings_new</mat-icon>
+    <mat-icon class="icon" aria-label="LogOut" svgIcon="exit" (click)="logout()"></mat-icon>
   </a>
 </section>
