--- a/src/app/components/sub-categories/agencies/litigation/lawyer/lawyer/lawyer.component.html
+++ b/src/app/components/sub-categories/agencies/litigation/lawyer/lawyer/lawyer.component.html
@@ -6,7 +6,7 @@
         الموكل  (الطرف الأول)
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>person_add</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <app-first-party></app-first-party>
@@ -22,7 +22,7 @@
         الوكيل  (الطرف الثاني)
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>person_add</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
 
@@ -40,7 +40,7 @@
         الشهود
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>group_add</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
 
@@ -58,7 +58,7 @@
         النماذج لتوكيل محامِ
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>library_books</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <app-debaga></app-debaga>
@@ -74,7 +74,7 @@
         المرفقات
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>library_books</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <ng-template matExpansionPanelContent>
@@ -91,7 +91,7 @@
         تقدير الرسوم والتحصيل
       </mat-panel-title>
       <mat-panel-description>
-        <mat-icon>monetization_on</mat-icon>
+        <mat-icon></mat-icon>
       </mat-panel-description>
     </mat-expansion-panel-header>
     <ng-template matExpansionPanelContent>
