--- a/src/app/core/side-menu/side-menu.component.html
+++ b/src/app/core/side-menu/side-menu.component.html
@@ -1,6 +1,6 @@
 
-<mat-sidenav-container class="side-menu" [hasBackdrop]="false">
-  <mat-sidenav #sidenav [mode]="'side'" gdArea="side" opened>
+<mat-sidenav-container class="side-menu canvas" [hasBackdrop]="false">
+  <mat-sidenav class="side-nav" #sidenav [mode]="'side'" gdArea="side" opened>
 <app-right-menu></app-right-menu>
   </mat-sidenav>
 
