--- a/src/app/core/brand/brand.component.html
+++ b/src/app/core/brand/brand.component.html
@@ -1,1 +1,1 @@
-<p><button mat-button (click)="sidenav.toggle()"><mat-icon>menu</mat-icon></button></p>
+<p><button mat-button id="toggle-button" (click)="sidenav.toggle()"><mat-icon svgIcon="menu"></mat-icon></button></p>
