--- a/src/app/core/right-menu/right-menu.component.html
+++ b/src/app/core/right-menu/right-menu.component.html
@@ -6,14 +6,14 @@
       <mat-nav-list>
         <a mat-list-item>
           <span [@animateText]="linkText ? 'show' : 'hide'"> </span>
-          <mat-icon >account_circle</mat-icon>
+          <mat-icon svgIcon="muslim"></mat-icon>
         </a>
       </mat-nav-list>
       <span class="spacer"></span>
       <div fxLayout="row" fxLayoutAlign="end center" >
-        <button mat-icon-button (click)="onSinenavToggle()">
-          <mat-icon *ngIf="!sideNavState">arrow_left</mat-icon>
-          <mat-icon *ngIf="sideNavState">arrow_right</mat-icon>
+        <button mat-icon-button (click)="onSinenavToggle()" class="center-icon" >
+          <mat-icon *ngIf="!sideNavState" svgIcon="fullscreen"></mat-icon>
+          <mat-icon *ngIf="sideNavState" svgIcon="collapse"></mat-icon>
         </button>
       </div>
       <mat-divider></mat-divider>
@@ -21,8 +21,8 @@
 
     <div>
       <mat-nav-list>
-        <a mat-list-item *ngFor="let page of pages" [matTooltip]="page.name" [routerLink]="page.link">
-          <mat-icon>{{page?.icon}}</mat-icon>
+        <a class="hover" mat-list-item *ngFor="let page of pages" [matTooltip]="page.name" [routerLink]="page.link">
+          <mat-icon [svgIcon]="page.icon"></mat-icon>
           <span [@animateText]="linkText ? 'show' : 'hide'" class="text-space">{{ page?.name }} </span>
         </a>
       </mat-nav-list>
