--- a/src/app/core/right-menu/right-menu.component.scss
+++ b/src/app/core/right-menu/right-menu.component.scss
@@ -1,3 +1,15 @@
-.mat-icon {
-  color: #856b4b !important;
+
+.mat-icon:hover , .hover:hover {
+  transition: all .2s;
+    color: #55c57a;
+    box-shadow: 0 1rem 3rem rgba(0, 0, 0, 0.4);
+    transform: rotate(5deg) scale(1.2);
+
+}
+
+.center-icon {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
