--- a/src/assets/resources/scss/layout/_scrollbar.scss
+++ b/src/assets/resources/scss/layout/_scrollbar.scss
@@ -1,8 +1,8 @@
 
 ::-webkit-scrollbar-track
 {
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-  background-color: #F5F5F5;
+  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3) !important;
+  background-color: #F5F5F5 !important;
 }
 
 ::-webkit-scrollbar
@@ -15,9 +15,14 @@
 
 ::-webkit-scrollbar-thumb
 {
-  border-radius: 10px;
-  -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
-  background-color: #F5F5F5;
+  background-color: #F90 !important;
+  background-image: -webkit-linear-gradient(90deg, rgba(255, 255, 255, .2) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, .2) 50%,
+    rgba(255, 255, 255, .2) 75%,
+    transparent 75%,
+    transparent) !important;
 }
 
 ::-webkit-scrollbar-thumb:hover
