--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/prebuilt-themes/deeppurple-amber.css';
-@import '~material-design-icons/iconfont/material-icons.css';
 
 html, body { height: 100%; }
 
@@ -168,4 +167,7 @@ span {
 .svg-size {
   width: 40% !important;
   height: 40% !important;
+}
+.mat-drawer-inner-container {
+  overflow-x: hidden !important;
 }
