--- a/src/app/components/side-menu-pages/admin-tipes/admin-tipes.component.html
+++ b/src/app/components/side-menu-pages/admin-tipes/admin-tipes.component.html
@@ -17,18 +17,69 @@
         <mat-card-content>
             <mat-form-field appearance="fill">
             <mat-label>نوع الكود</mat-label>
-            <mat-select>
-                <!-- <mat-option value="option">Option</mat-option> -->
-                <mat-option *ngFor="let adminTipes of (adminTypes$ | async)?.items" [value]="adminTipes.AdminTypeId">{{adminTipes.AdminTypeNameAr}}</mat-option>
+            <mat-select [formControl]="adminTipesControl">
+                <mat-option *ngFor="let adminTipes of (adminTypes$ | async)?.items" [value]="adminTipes.AdminTypeNameAr">{{adminTipes.AdminTypeNameAr}}</mat-option>
             </mat-select>
             </mat-form-field>
         </mat-card-content>
 
-        <br>
+    <div *ngIf="adminTipesControl.value">
+        <mat-card-content>
+            <form [formGroup]="searchForm" novalidate autocomplete="off">
+            <div class="mat-elevation-z8 card-content-space-around" fxLayout="column" fxLayoutAlign="center">
+              <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
+               
+                <div fxFlex="25%" fxFlexOffset.gt-lg="10px">
+                  <mat-form-field>
+                    <mat-label>الترتيب</mat-label>
+                    <input matInput formControlName="position">
+                  </mat-form-field>
+                </div>
+                
+                <div fxFlex="25%" fxFlexOffset.gt-lg="10px">
+                    <mat-form-field>
+                      <mat-label>الإسم باللغه العربية</mat-label>
+                      <input matInput formControlName="arabicName">
+                    </mat-form-field>
+                  </div>
+
+                  <div fxFlex="25%" fxFlexOffset.gt-lg="10px">
+                    <mat-form-field>
+                      <mat-label>الإسم باللغه الإنجليزيه</mat-label>
+                      <input matInput formControlName="englishName">
+                    </mat-form-field>
+                  </div>
+
+                  <div fxFlex="25%" fxFlexOffset.gt-lg="10px">
+                    <mat-form-field>
+                      <mat-label>الكود باللغه الإنجليزيه</mat-label>
+                      <input matInput formControlName="englishSymbol">
+                    </mat-form-field>
+                  </div>
+              </div>
+
+              <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%">
+                <mat-checkbox id="active" formControlName="active">نشط</mat-checkbox>
+              </div>
+            </div>
+          </form>
+          </mat-card-content>
+
+          <mat-card-actions>
+            <div fxLayout="row" fxLayout.xs="column" fxLayoutWrap fxLayoutGap="0.5%" fxLayoutAlign="center">
+              <div  >
+                <button mat-raised-button color="Basic">اضافه</button>
+              </div>
+              <div >
+              <button mat-raised-button color="warn">مسح</button>
+            </div>
+            </div>
+          </mat-card-actions>
+        </div>      
 
         <mat-card-content>
         <fieldset>
-                <legend>قائمه</legend>
+            <legend>قائمه {{adminTipesControl.value}}</legend>
 
             <mat-table class="mat-elevation-z8">
 
